<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xmlns="http://maven.apache.org/POM/4.0.0"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <artifactId>it-asset-management-app</artifactId>

  <build>
    <plugins>
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <argLine>
            @{argLine} --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
            --add-opens javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
            -Djava.awt.headless=true -Dtestfx.robot=glass -Dtestfx.headless=true
            -Dglass.platform=Monocle -Dmonocle.platform=Headless -Dprism.order=sw -Dprism.text=t2k
            -Dtestfx.setup.timeout=30000 -Dprism.verbose=true
          </argLine>
        </configuration>
        <groupId>org.apache.maven.plugins</groupId>
        <version>${surefire.version}</version>
      </plugin>
      <plugin>
        <artifactId>maven-failsafe-plugin</artifactId>
        <groupId>org.apache.maven.plugins</groupId>
        <version>${surefire.version}</version>
      </plugin>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <annotationProcessorPaths>
            <path>
              <artifactId>lombok</artifactId>
              <groupId>org.projectlombok</groupId>
              <version>${lombok.version}</version>
            </path>
          </annotationProcessorPaths>
          <source>16</source>
          <target>16</target>
        </configuration>
        <groupId>org.apache.maven.plugins</groupId>
        <version>3.8.1</version>
      </plugin>
      <plugin>
        <artifactId>javafx-maven-plugin</artifactId>
        <executions>
          <execution>
            <!-- Default configuration for running with: mvn clean javafx:run -->
            <configuration>
              <mainClass>
                ${mainclass}
              </mainClass>
            </configuration>
            <id>default-cli</id>
          </execution>
        </executions>
        <groupId>org.openjfx</groupId>
        <version>0.0.6</version>
      </plugin>
      <plugin>
        <artifactId>jacoco-maven-plugin</artifactId>
        <executions>
          <execution>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
            <id>default-prepare-agent</id>
          </execution>
          <execution>
            <goals>
              <goal>report</goal>
            </goals>
            <id>default-report</id>
          </execution>
        </executions>
        <groupId>org.jacoco</groupId>
        <version>${jacoco.version}</version>
      </plugin>
      <plugin>
        <artifactId>maven-javadoc-plugin</artifactId>
        <configuration>
          <doclint>all,-missing</doclint>
        </configuration>
        <groupId>org.apache.maven.plugins</groupId>
        <version>3.3.1</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.2.0</version>
        <configuration>
          <archive>
            <manifest>
              <addClasspath>true</addClasspath>
              <mainClass>${launcherclass.name}</mainClass>
            </manifest>
          </archive>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <executions>
          <execution>
            <goals>
              <goal>shade</goal>
            </goals>
            <configuration>
              <shadedArtifactAttached>true</shadedArtifactAttached>
              <transformers>
                <transformer implementation=
                  "org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                  <mainClass>${launcherclass.name}</mainClass>
                </transformer>
              </transformers>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
  <dependencies>
    <dependency>
      <artifactId>lombok</artifactId>
      <groupId>org.projectlombok</groupId>
      <version>${lombok.version}</version>
    </dependency>
    <dependency>
      <artifactId>guava</artifactId>
      <groupId>com.google.guava</groupId>
      <version>31.0.1-jre</version>
    </dependency>
    <dependency>
      <artifactId>javafx-controls</artifactId>
      <groupId>org.openjfx</groupId>
      <version>${javafx.version}</version>
    </dependency>
    <dependency>
      <artifactId>javafx-fxml</artifactId>
      <groupId>org.openjfx</groupId>
      <version>${javafx.version}</version>
    </dependency>
    <dependency>
      <artifactId>controlsfx</artifactId>
      <groupId>org.controlsfx</groupId>
      <version>11.1.0</version>
    </dependency>
    <dependency>
      <artifactId>formsfx-core</artifactId>
      <exclusions>
        <exclusion>
          <artifactId>*</artifactId>
          <groupId>org.openjfx</groupId>
        </exclusion>
      </exclusions>
      <groupId>com.dlsc.formsfx</groupId>
      <version>11.4.2</version>
    </dependency>
    <dependency>
      <artifactId>validatorfx</artifactId>
      <exclusions>
        <exclusion>
          <artifactId>*</artifactId>
          <groupId>org.openjfx</groupId>
        </exclusion>
      </exclusions>
      <groupId>net.synedra</groupId>
      <version>0.2.1</version>
    </dependency>
    <dependency>
      <artifactId>ikonli-javafx</artifactId>
      <groupId>org.kordamp.ikonli</groupId>
      <version>12.2.0</version>
    </dependency>
    <dependency>
      <artifactId>bootstrapfx-core</artifactId>
      <groupId>org.kordamp.bootstrapfx</groupId>
      <version>0.4.0</version>
    </dependency>
    <dependency>
      <artifactId>junit-jupiter-api</artifactId>
      <groupId>org.junit.jupiter</groupId>
      <scope>test</scope>
      <version>${junit.version}</version>
    </dependency>
    <dependency>
      <artifactId>junit-jupiter-engine</artifactId>
      <groupId>org.junit.jupiter</groupId>
      <scope>test</scope>
      <version>${junit.version}</version>
    </dependency>
    <dependency>
      <artifactId>dotenv-java</artifactId>
      <groupId>io.github.cdimascio</groupId>
      <version>2.2.3</version>
    </dependency>
    <dependency>
      <artifactId>hibernate-core</artifactId>
      <groupId>org.hibernate</groupId>
      <version>5.6.1.Final</version>
    </dependency>
    <dependency>
      <artifactId>postgresql</artifactId>
      <groupId>org.postgresql</groupId>
      <version>42.3.1</version>
    </dependency>
    <dependency>
      <artifactId>javax.persistence-api</artifactId>
      <groupId>javax.persistence</groupId>
      <version>2.2</version>
    </dependency>
    <dependency>
      <artifactId>log4j-api</artifactId>
      <groupId>org.apache.logging.log4j</groupId>
      <version>${log4j.version}</version>
    </dependency>
    <dependency>
      <artifactId>log4j-core</artifactId>
      <groupId>org.apache.logging.log4j</groupId>
      <version>${log4j.version}</version>
    </dependency>
    <dependency>
      <artifactId>annotations</artifactId>
      <groupId>org.jetbrains</groupId>
      <scope>compile</scope>
      <version>22.0.0</version>
    </dependency>
    <dependency>
      <artifactId>jacoco-maven-plugin</artifactId>
      <groupId>org.jacoco</groupId>
      <type>maven-plugin</type>
      <version>${jacoco.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <artifactId>mockito-core</artifactId>
      <groupId>org.mockito</groupId>
      <scope>test</scope>
      <version>4.1.0</version>
    </dependency>
    <dependency>
      <artifactId>testfx-core</artifactId>
      <groupId>org.testfx</groupId>
      <scope>test</scope>
      <version>${testfx.version}</version>
    </dependency>
    <dependency>
      <artifactId>testfx-junit5</artifactId>
      <groupId>org.testfx</groupId>
      <scope>test</scope>
      <version>${testfx.version}</version>
    </dependency>
    <dependency>
      <artifactId>hamcrest</artifactId>
      <groupId>org.hamcrest</groupId>
      <scope>test</scope>
      <version>2.2</version>
    </dependency>
    <dependency>
      <artifactId>openjfx-monocle</artifactId>
      <groupId>org.testfx</groupId>
      <scope>test</scope>
      <version>jdk-12.0.1+2</version>
    </dependency>
    <dependency>
      <artifactId>h2</artifactId>
      <groupId>com.h2database</groupId>
      <version>2.0.202</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.maven.plugins</groupId>
      <artifactId>maven-jar-plugin</artifactId>
      <version>3.2.0</version>
      <type>maven-plugin</type>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.maven.plugins</groupId>
      <artifactId>maven-shade-plugin</artifactId>
      <version>3.2.4</version>
      <type>maven-plugin</type>
      <scope>provided</scope>
    </dependency>
  </dependencies>
  <groupId>org.otp-r11</groupId>
  <modelVersion>4.0.0</modelVersion>

  <name>it-asset-management-app</name>

  <properties>
    <jacoco.version>0.8.7</jacoco.version>
    <javafx.version>17.0.0.1</javafx.version>
    <junit.version>5.8.2</junit.version>
    <log4j.version>2.14.1</log4j.version>
    <lombok.version>1.18.22</lombok.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <surefire.version>3.0.0-M5</surefire.version>
    <testfx.version>4.0.16-alpha</testfx.version>
    <launcherclass>${mainclass.package}/${launcherclass.name}</launcherclass>
    <launcherclass.name>org.otpr11.itassetmanagementapp.Launcher</launcherclass.name>
    <mainclass>${mainclass.package}/${mainclass.name}</mainclass>
    <mainclass.package>org.otpr11.itassetmanagementapp</mainclass.package>
    <mainclass.name>org.otpr11.itassetmanagementapp.Main</mainclass.name>
    <classpath>${project.build.directory}/${classpath.prefix}</classpath>
    <classpath.prefix>libs</classpath.prefix>
  </properties>

  <packaging>jar</packaging>
  <version>1.0-SNAPSHOT</version>
</project>